Correct z-index of loading bar

--- a/src/styles/_Timeline.scss
+++ b/src/styles/_Timeline.scss
@@ -195,6 +195,7 @@
   width: 100%;
   height: 6px;
   background-color: #fdba2c;
+  z-index: 1;
 
 
   .bar {
